# genAI

./: .env  .gitignore  Dockerfile  ETL.py  Makefile  README.md  database.py  docker-compose-airflow.yaml  docker-compose.yaml  docker-compose.yml  elasticsearch_commands.txt  generativeAI.py  image_generator.py  main.py  ports.txt  proxy_list.json  pyproject.toml  rag_system.py  requirements.txt  scrape.py  scraper.py  style_transfer.py
airflow/: airflow.cfg  airflow.db  standalone_admin_password.txt
airflow_resources/: Dockerfile
bash_scripts/: data_generator.sh  spark_to_elasticsearch.sh  spark_to_minio.sh
dags/: airflow_dag.py  presc_pipeline.py
data/: corporation_financial.csv  last_processed.json
database/: database.py  test_database.py
etl/: config.py  database.py  logger.py  models.py  processor.py  scraper.py  text_processor.py  validator.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
kafka_admin_client/: kafka_admin_client.py
model/: config.py  hybrid_analyzer.py  rag_model.py  service.py  viz_model.py
models/: data_model.py
pipeline/: connection.py  main_pipeline.py
read_and_write_initial_data/: read_and_write_pandas.py  read_and_write_spark.py
scrape/: scrape.py  test_fortune500_scraper.py
scripts/: create_table.py  spark_etl.py  validate.py
services/: csv_processor.py  gpt_query.py  utils.py
spark_streaming/: spark_to_elasticsearch.py  spark_to_minio.py
sql/: init_db.sql
src/: constants.py
test_dag/: test_dag_validity.py
visualization/: dashboard.html
(+24 files in other folders)
